# cv101

./: .gitignore  Week1.ipynb  Week2-1.ipynb  Week2-2.ipynb  graph.md  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
image_classification/: classification.ipynb  classification_2.ipynb
